--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node prisma/seed.js",
-    "seed:reset": "npx prisma migrate reset && node prisma/seed.js"
+    "seed:reset": "npx prisma migrate reset && node prisma/seed.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
